--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4467,6 +4467,25 @@ ul.mainnav li ul.menu li:last-child a {
   filter: alpha(opacity=20);
   cursor: pointer
 }
+.intrinsic-container {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}.intrinsic-container-16x9 {
+  padding-bottom: 56.25%;
+}
+
+.intrinsic-container-4x3 {
+  padding-bottom: 75%;
+}
+
+.intrinsic-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 #sns_mommenu .collapse_wrap {
   width: 100%;
   position: absolute;
@@ -5162,10 +5181,10 @@ ul.mainnav li ul.menu li:last-child a {
   height: 36px;
   position: relative;
   font-size: 14px;
-  background: #fff;
+  background: #e34444;
   text-transform: uppercase;
   font-weight: 700;
-  color: #333;
+  color: #fff;
   line-height: 35px;
   margin-right: 6px;
   border: 1px solid #eaeaea
@@ -5180,9 +5199,9 @@ ul.mainnav li ul.menu li:last-child a {
   text-align: center
 }
 .sns-product-detail .product-essential .product-shop .item-inner.product_list_style .item-info .actions .btn-cart:hover {
-  background: #e34444;
+  background: #fff;
   border: 1px solid #e34444;
-  color: #fff
+  color: #e34444
 }
 .sns-product-detail .product-essential .product-shop .item-inner.product_list_style .item-info .actions .btn-cart:hover i {
   animation: 1.3s ease-out 75ms normal none 1 running wobble;
@@ -6300,6 +6319,9 @@ span:hover {
   transition: all 0.10s ease;
  
 }
+.sidebarColor{
+  background: #222 !important;
+}
 
 
 .sidebar .new5{
@@ -6327,13 +6349,16 @@ span:hover {
 
 
 .sidebar.active #btn{
-  left: 90%;
+  left: 80%;
+}
+.sidebar.active #position{
+  left: 80%;
 }
 
 
 
 .sidebar ul{
-  margin-top: 70px;
+  margin-top: 50px;
   padding-left: 0;
 }
 
@@ -6388,11 +6413,23 @@ span:hover {
   color: rgb(51, 51, 51)
   
 }
+.sidebarRes ul li a{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  border-radius: 12px;
+  color: white;
+}
 
 
 .sidebar  ul li  a:hover{
   background: #ffffff;
   color: #262626;
+}
+.sidebarRes  ul li  a:hover{
+  background: #ffffff;
+  color: #ffc400;
 }
 
 
